LRIS-30056 fix search z-indexes

--- a/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_exports.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_exports.scss
@@ -42,7 +42,7 @@
 		position: absolute;
 		top: 31px;
 		width: 150px;
-		z-index: 3;
+		z-index: 5000;
 
 		li a {
 			color: #000;
