--- a/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_generic.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_generic.scss
@@ -46,7 +46,7 @@
 				position: absolute;
 				top: 0;
 				width: 87px;
-				z-index: 1;
+				z-index: 10;
 			}
 
 			&.hover {
@@ -122,7 +122,7 @@
 		right: 15px;
 		top: 100%;
 		white-space: nowrap;
-		z-index: 1;
+		z-index: 5000;
 
 		ul {
 			margin: 0;
@@ -147,27 +147,7 @@
 		}
 
 		&.ticket-search {
-			z-index: 3;
+			z-index: 5001;
 		}
-	}
-}
-
-.overlay {
-	background-color: $text-color;
-	display: block;
-	opacity: 0.3;
-	pointer-events: none;
-	position: absolute;
-	z-index: 10;
-
-	& div {
-		color: #FFF;
-		display: block;
-		font-size: 16px;
-		font-style: italic;
-		font-weight: bold;
-		margin: 0 auto;
-		text-align: center;
-		width: 470px;
 	}
 }
