--- a/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_multiple_ticket_select.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_multiple_ticket_select.scss
@@ -18,7 +18,7 @@
 			margin: -8px 0 0 -1px;
 			padding: 0;
 			position: absolute;
-			z-index: 3;
+			z-index: 5000;
 
 			li {
 				padding: 5px;
