--- a/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_search.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_search.scss
@@ -310,7 +310,6 @@
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		width: 100%;
-		z-index: 1;
 	}
 
 	.taglib-page-iterator .page-links, .taglib-page-iterator .search-results {
